--- a/msc-config-eureka-server.yml
+++ b/msc-config-eureka-server.yml
@@ -18,7 +18,7 @@ eureka:
 #   表示自己就是注册中心.职责就是维护服务,不需要进行检索.
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://localhost:7001/eureka/
 ---
 server:
   port: 7001
@@ -35,4 +35,4 @@ eureka:
 #   表示自己就是注册中心.职责就是维护服务,不需要进行检索.
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://localhost:7001/eureka/
